--- a/package.json
+++ b/package.json
@@ -1,78 +1,40 @@
 {
   "name": "react-boilerplate",
   "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/schiehll/react-boilerplate.git",
+  "author": "Reinaldo Schiehll <rn.schiehll@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "standard --fix",
-    "start": "cross-env NODE_ENV=development babel-node scripts/start",
-    "build": "cross-env NODE_ENV=production babel-node scripts/build",
-    "test": "standard && jest --coverage",
-    "test:watch": "standard && jest --watch --coverage",
-    "precommit": "npm test"
-  },
-  "dependencies": {
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^3.0.0"
+    "build": "webpack --mode production --config webpack/webpack.config.js",
+    "analyze": "webpack --mode production --config webpack/webpack.analyze.js",
+    "dev":
+      "webpack-dev-server --mode development --hot --config webpack/webpack.dev.js",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.7",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "cross-env": "^3.1.3",
-    "enzyme": "^2.6.0",
-    "enzyme-to-json": "^1.3.0",
-    "filesize": "^3.3.0",
-    "fs-extra": "^1.0.0",
-    "gzip-size": "^3.0.0",
-    "html-webpack-plugin": "^2.24.1",
-    "husky": "^0.11.9",
-    "jest-cli": "^17.0.2",
-    "json-loader": "^0.5.4",
-    "object-assign": "^4.1.0",
-    "promise": "^7.1.1",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dev-utils": "^0.3.0",
-    "recursive-readdir": "^2.1.0",
-    "rimraf": "^2.5.4",
-    "standard": "^8.5.0",
-    "strip-ansi": "^3.0.1",
-    "webpack": "v2.1.0-beta.27",
-    "webpack-dev-server": "^1.16.2"
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "eslint": "^4.19.0",
+    "eslint-plugin-react": "^7.7.0",
+    "html-webpack-plugin": "^3.0.7",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.0",
+    "prettier": "^1.11.1",
+    "webpack": "^4.2.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-merge": "^4.1.2"
   },
-  "babel": {
-    "presets": [
-      ["es2015", {"modules": false}],
-      "stage-2",
-      "react"
-    ],
-    "plugins": [
-      "transform-decorators-legacy"
-    ]
-  },
-  "standard": {
-    "parser": "babel-eslint",
-    "globals": [
-      "beforeEach",
-      "test",
-      "expect"
-    ],
-    "ignore": [
-      "build"
-    ]
-  },
-  "jest": {
-    "coveragePathIgnorePatterns": [
-      "<rootDir>/scripts/",
-      "<rootDir>/public/",
-      "<rootDir>/config/",
-      "<rootDir>/build/"
-    ]
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-loadable": "^5.3.1",
+    "react-router-dom": "^4.2.2"
   }
 }
