--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
   "src/**/*.js": ["eslint --fix", "git add"],
-  "*.js": ["prettier --write", "git add"]
+  "*.{js,md,json}": ["prettier --write", "git add"]
 }
