--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "analyze": "webpack --mode production --config webpack/webpack.analyze.js",
     "dev":
       "webpack-dev-server --mode development --hot --config webpack/webpack.dev.js",
+    "lint": "lint-staged",
     "precommit": "lint-staged"
   },
   "devDependencies": {
