--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "loadable-components": "^2.2.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2"
   }
 }
