--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "@reach/router": "^1.1.1",
     "loadable-components": "^2.2.3",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-router-dom": "^4.2.2"
+    "react-dom": "^16.3.1"
   }
 }
