Add styled-components + server

--- a/package.json
+++ b/package.json
@@ -6,39 +6,53 @@
   "author": "Reinaldo Schiehll <rn.schiehll@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "serve": "serve -s dist",
-    "build": "webpack --mode production --config webpack/webpack.config.js",
+    "build:client": "rm -rf dist/client/** && webpack --mode production --config webpack/webpack.config.js",
+    "build:server": "rm -rf dist/server/** && NODE_ENV=production babel src/server --out-dir dist/server",
+    "build": "yarn build:server && yarn build:client",
     "analyze": "webpack --mode production --config webpack/webpack.analyze.js",
-    "dev": "webpack-dev-server --mode development --hot --config webpack/webpack.dev.js",
+    "dev": "rm -rf dist/client/** && node -r @babel/register src/server/index.js",
+    "start": "NODE_ENV=production node dist/server/index.js",
     "lint": "lint-staged",
     "precommit": "lint-staged"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0",
+    "babel-plugin-styled-components": "^1.8.0",
     "eslint": "^4.19.0",
     "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.0.7",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "prettier": "^1.11.1",
-    "serve": "^9.4.0",
     "webpack": "^4.2.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.12",
+    "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.1",
+    "webpack-hot-middleware": "^2.24.2",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.2",
     "@reach/router": "^1.1.1",
+    "express": "^4.16.3",
     "loadable-components": "^2.2.3",
+    "prop-types": "^15.6.2",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "styled-components": "^4.0.0-beta.9",
+    "styled-media-query": "^2.0.2"
   }
 }
