--- a/src/server/.babelrc
+++ b/src/server/.babelrc
@@ -3,16 +3,18 @@
     [
       "@babel/preset-env",
       {
-        "modules": false
+        "targets": {
+          "node": "current"
+        }
       }
-    ],
-    "@babel/preset-react"
+    ]
   ],
   "plugins": [
-    "babel-plugin-styled-components",
     "@babel/plugin-transform-runtime",
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-optional-chaining"
+    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-export-namespace-from"
   ]
 }
