--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
   "author": "Reinaldo Schiehll <rn.schiehll@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build:client": "rm -rf dist/client/** && webpack --mode production --config webpack/webpack.config.js",
-    "build:server": "rm -rf dist/server/** && NODE_ENV=production babel src/server --out-dir dist/server",
-    "build": "yarn build:server && yarn build:client",
+    "build": "rm -rf public/** && webpack --mode production --config webpack/webpack.config.js",
     "analyze": "webpack --mode production --config webpack/webpack.analyze.js",
-    "dev": "rm -rf dist/client/** && node -r @babel/register src/server/index.js",
-    "start": "NODE_ENV=production node dist/server/index.js",
+    "dev": "rm -rf public/** && webpack-dev-server --hot --config webpack/webpack.dev.js",
+    "start": "serve --single ./public",
     "lint": "lint-staged",
     "precommit": "lint-staged"
   },
@@ -36,6 +34,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "prettier": "^1.11.1",
+    "serve": "^10.1.1",
     "webpack": "^4.2.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.12",
@@ -47,12 +46,10 @@
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "@reach/router": "^1.1.1",
-    "express": "^4.16.3",
-    "loadable-components": "^2.2.3",
     "prop-types": "^15.6.2",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "styled-components": "^4.0.0-beta.9",
-    "styled-media-query": "^2.0.2"
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "styled-components": "^4.1.3",
+    "styled-media-query": "^2.1.1"
   }
 }
