--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # The following redirect is intended for use with most SPA's that handles routing internally.
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "./public/index.html"
   status = 200
   force = true # Ensure that we always redirect
