--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0",
     "babel-plugin-styled-components": "^1.8.0",
+    "dotenv-webpack": "^1.6.0",
     "eslint": "^4.19.0",
     "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.0.7",
@@ -48,6 +49,7 @@
     "@reach/router": "^1.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0-alpha.2",
+    "react-cache": "^2.0.0-alpha.1",
     "react-dom": "^16.7.0-alpha.2",
     "styled-components": "^4.1.3",
     "styled-media-query": "^2.1.1"
