--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,7 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[context.production.environment]
+  OMDB_URL=http://www.omdbapi.com
+  POPCORN_URL=https://tv-v2.api-fetch.website
