Add https to omdb api

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 OMDB_API_KEY=secretkey
-OMDB_URL=http://www.omdbapi.com
+OMDB_URL=https://www.omdbapi.com
 POPCORN_URL=https://tv-v2.api-fetch.website
