--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,1 @@
-OMDB_API_KEY=secretkey
-OMDB_URL=https://www.omdbapi.com
-POPCORN_URL=https://tv-v2.api-fetch.website
+API_URL=http://localhost:3000
