--- a/package.json
+++ b/package.json
@@ -47,8 +47,15 @@
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "@reach/router": "^1.1.1",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link": "^1.2.6",
+    "apollo-link-http": "^1.5.9",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0-alpha.2",
+    "react-apollo-hooks": "^0.2.1",
     "react-cache": "^2.0.0-alpha.1",
     "react-dom": "^16.7.0-alpha.2",
     "styled-components": "^4.1.3",
