--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [context.production.environment]
-  API_URL=http://localhost:3000
+  API_URL="http://localhost:3000"
 
 [[redirects]]
   from = "/*"
