--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv-webpack": "^1.6.0",
     "eslint": "^4.19.0",
     "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.0.7",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
